hubernetes/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /employee/?(.*)
        backend:
          serviceName: employee
          servicePort: 8080
      - path: /department/?(.*)
        backend:
          serviceName: department
          servicePort: 8080
      - path: /organization/?(.*)
        backend:
          serviceName: organization
          servicePort: 8888
      - path: /?(.*)
        backend:
          serviceName: gateway
          servicePort: 8080
